--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "scripts": {
     "start:server": "node server.js",
     "start:react": "react-scripts start",
-    "start": "concurrently \"npm run start:server\" \"npm run start:react\"",
+    "start": "concurrently \"npm run start:react\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
