--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
     "react-window": "^1.8.10",
     "recharts": "^2.12.7",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4",
     "window": "^4.2.7"
   },
